[package]
name = "fontrabak"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
babelfont = { git = "https://github.com/simoncozens/babelfont-rs", features = [
    "glyphs",
    "fontra",
], default-features = false }
web-sys = { version = "0.3.76", features = ["Blob", "BlobPropertyBag"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2.63" }
console_error_panic_hook = { version = "0.1.6" }
js-sys = { version = "0.3.68" }
serde_json = { version = "1.0.68" }
